--- a/frontend/src/style/custom.css
+++ b/frontend/src/style/custom.css
@@ -2,3 +2,19 @@
 body {
   padding-top: 56px; /* Adjust the value based on the height of your navbar */
 }
+
+/* HomePage.module.css */
+.mainHeading {
+  text-align: center;
+  font-size: 2rem; /* Example size, adjust as needed */
+  color: #007bff; /* Bootstrap primary color */
+  margin-bottom: 1rem;
+}
+
+.siteName {
+  text-align: center;
+  font-size: 1.5rem;
+  color: #28a745; /* Bootstrap success color */
+  margin-top: 20px;
+  font-weight: bold;
+}
